[gd_scene load_steps=21 format=2]

[ext_resource path="res://Rats.gd" type="Script" id=1]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile000.png" type="Texture" id=2]
[ext_resource path="res://Assets/Forest/Mushroom_death/tile000.png" type="Texture" id=3]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile003.png" type="Texture" id=4]
[ext_resource path="res://Assets/Forest/Mushroom_death/tile003.png" type="Texture" id=5]
[ext_resource path="res://Assets/Forest/Mushroom_death/tile002.png" type="Texture" id=6]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile005.png" type="Texture" id=7]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile004.png" type="Texture" id=8]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile007.png" type="Texture" id=9]
[ext_resource path="res://Assets/Forest/Mushroom_death/tile001.png" type="Texture" id=10]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile001.png" type="Texture" id=11]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile006.png" type="Texture" id=12]
[ext_resource path="res://Assets/Forest/Mushroom_walk/tile002.png" type="Texture" id=13]
[ext_resource path="res://Area2D.gd" type="Script" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 19.3191 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.1752, 4.89059 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.7029, 18.329 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14.8044, 1.81653 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.0905, 1.58875 )

[node name="Rats" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 216.647, 384.127 )
scale = Vector2( 1.5374, 1.54683 )
frames = SubResource( 1 )
animation = "Walk"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 217.722, 400.573 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 240.625, 412.903 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="Top" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2( 216.945, 375.332 )
shape = SubResource( 3 )

[node name="Sides" type="Area2D" parent="."]
position = Vector2( 0, 2.1189 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sides"]
position = Vector2( 218.243, 397.539 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 217.052, 367.75 )
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 217.182, 367.755 )
shape = SubResource( 6 )
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_entered" from="Sides" to="." method="_on_Sides_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
